alignment isssue resolved now

--- a/Version 3/index.css
+++ b/Version 3/index.css
@@ -184,6 +184,10 @@ a:link , a:visited{
     .row{
         display: flex;
         justify-content: space-around;
-        align-items: center;
+        align-items: flex-start;
+    }
+    .book_container:last-child{
+        margin-right: auto;
+        margin-left: 40px;   
     }
 }
